--- a/dot_config/lazygit/config.yml
+++ b/dot_config/lazygit/config.yml
@@ -1,21 +1,16 @@
 gui:
   mainPanelSplitMode: "flexible"
   language: "en"
-  nerdFontsVersion: 3
+  nerdFontsVersion: "3"
   theme:
     selectedLineBgColor:
-      - "#4b5261"
-    selectedRangeBgColor:
       - "#4b5261"
   branchColors:
     "docs": blue
     "fix": red
     "feat": green
-git:
-  pull:
-    mode: "auto"
-notARepository: "quit"
+notARepository: "skip"
 os:
-  edit: "lvim"
+  edit: "nvim"
 update:
   days: 7
