Update .config/topgrade/topgrade.toml Update .config/zsh/aliases.zsh Update .config/zsh/.zshrc Update .config/zsh/exports.zsh

--- a/dot_config/topgrade/topgrade.toml
+++ b/dot_config/topgrade/topgrade.toml
@@ -19,5 +19,5 @@ greedy_cask = true
 autoremove = true
 
 [commands]
-"Wezterm update" = "brew upgrade --cask wezterm-nightly --no-quarantine --greedy-latest"
+"Wezterm nightly update" = "brew upgrade --cask wezterm@nightly --no-quarantine --greedy-latest"
 "Neovim update" = "brew upgrade neovim --fetch-head"
